--- a/2.+Read_BLOB_Example+-+Using+Local+Spark+from+DSVM.ipynb
+++ b/2.+Read_BLOB_Example+-+Using+Local+Spark+from+DSVM.ipynb
@@ -22,8 +22,8 @@
    },
    "outputs": [],
    "source": [
-    "account_name = 'qbsecstorage'\n",
-    "account_key = '3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw=='"
+    "account_name = 'XYZ'\n",
+    "account_key = 'AccessKey'"
    ]
   },
   {
@@ -63,7 +63,7 @@
    },
    "outputs": [],
    "source": [
-    "spark.conf.set(\"fs.azure.account.key.qbsecstorage.blob.core.windows.net\", \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\")\n",
+    "spark.conf.set(\"fs.azure.account.key.XYZ.blob.core.windows.net\", \"AccessKey\")\n",
     "spark.conf.set(\"fs.wasb.impl\",\"org.apache.hadoop.fs.azure.NativeAzureFileSystem\")"
    ]
   },
