--- a/2.+Read_BLOB_Example+-+Using+Local+Spark+from+DSVM.ipynb
+++ b/2.+Read_BLOB_Example+-+Using+Local+Spark+from+DSVM.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
+   "metadata": {f
     "collapsed": true
    },
    "outputs": [],
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "get_spark_blob(account_name, account_key).read.format('csv').option('header', 'true').load('wasb://qbdata@qbsecstorage.blob.core.windows.net/data/01_raw/HR/20180314/')"
+    "get_spark_blob(account_name, account_key).read.format('csv').option('header', 'true').load('wasb://qbdata@XYZ.blob.core.windows.net/data/01_raw/HR/20180314/')"
    ]
   },
   {
@@ -88,7 +88,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.parquet(\"wasb://qbdata@qbsecstorage.blob.core.windows.net/data/03_primary/product_jan_18/parquet/201804091123/\")"
+    "df = spark.read.parquet(\"wasb://DATA@XYZ.blob.core.windows.net/data/03_primary/product_jan_18/parquet/201804091123/\")"
    ]
   },
   {
