--- a/3.+Local+Spark+Session+-+Python+Example.ipynb
+++ b/3.+Local+Spark+Session+-+Python+Example.ipynb
@@ -27,8 +27,8 @@
     "spark = SparkSession.builder \\\n",
     "\t.appName(\"test\") \\\n",
     "\t.master(\"local[*]\") \\\n",
-    "\t.config(\"fs.azure.account.key.qbsecstorage.blob.core.windows.net\", #\n",
-    "            \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\") \\\n",
+    "\t.config(\"fs.azure.account.key.XYZ.blob.core.windows.net\", #\n",
+    "            \"AccessKey\") \\\n",
     "\t.getOrCreate()"
    ]
   },
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.parquet(\"wasb://qbdata@qbsecstorage.blob.core.windows.net/data/03_primary/customer/parquet/201804041057/\")"
+    "df = spark.read.parquet(\"wasb://data@XYZ.blob.core.windows.net/data/03_primary/customer/parquet/201804041057/\")"
    ]
   },
   {
