--- a/5.+HDInsight+SparkSession+-+PythonExample.ipynb
+++ b/5.+HDInsight+SparkSession+-+PythonExample.ipynb
@@ -56,8 +56,8 @@
     "spark = SparkSession.builder \\\n",
     "        .appName(\"test-from-jupyter\") \\\n",
     "        .master(\"yarn\") \\\n",
-    "        .config(\"fs.azure.account.key.XYZ.blob.core.windows.net\", \\\n",
-    "                \"AccessKey\") \\\n",
+    "        .config(\"fs.azure.account.key.qbsecstorage.blob.core.windows.net\", \\\n",
+    "                \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\") \\\n",
     "        .getOrCreate()"
    ]
   },
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read.parquet(\"wasb://data@XYZ.blob.core.windows.net/data/03_primary/product_jan_18/parquet/201804091123/\")"
+    "df = spark.read.parquet(\"wasb://qbdata@qbsecstorage.blob.core.windows.net/data/03_primary/product_jan_18/parquet/201804091123/\")"
    ]
   },
   {
