--- a/6.+Performance+Testing+-+Final+%28to+be+used+setting%29.ipynb
+++ b/6.+Performance+Testing+-+Final+%28to+be+used+setting%29.ipynb
@@ -8,10 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_spark_blob(stg_accnt_nm, stg_key):\n",
-    "    return SparkSession.builder.appName(\"test\").master(\"local[*]\").config(\n",
-    "        'fs.azure.account.key.' + stg_accnt_nm + '.blob.core.windows.net', stg_key) \\\n",
-    "        .config(\"fs.wasb.impl\", \"org.apache.hadoop.fs.azure.NativeAzureFileSystem\").getOrCreate()"
+    "# Code is not working here - but it works with spark-submit"
    ]
   },
   {
@@ -22,28 +19,33 @@
    },
    "outputs": [],
    "source": [
-    "account_name = 'qbsecstorage'\n",
-    "account_key = '3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw=='"
+    "# Set environment variables\n",
+    "import os\n",
+    "os.environ['AZURE_SPARK'] ='1'\n",
+    "os.environ['SPARK_MAJOR_VERSION'] ='2'\n",
+    "os.environ['HDP_VERSION'] ='2.6.5.8-7'\n",
+    "os.environ['JAVA_HOME'] ='/usr/lib/jvm/java-8-openjdk-amd64'\n",
+    "os.environ['SPARK_HOME'] ='/usr/hdp/current/spark2-client'\n",
+    "os.environ['HADOOP_HOME'] ='/usr/hdp/2.6.5.8-7/hadoop'\n",
+    "os.environ['HADOOP_CONF_DIR'] ='/etc/hadoop/conf'\n",
+    "os.environ['SPARK_CONF_DIR'] ='/usr/hdp/current/spark2-client/conf'\n",
+    "os.environ['PYSPARK_PYTHON'] ='/anaconda/envs/py35/bin/python'\n",
+    "os.environ['SPARK_DIST_CLASSPATH'] =':/usr/hdp/current/spark2-client/jars/*:/usr/lib/hdinsight-datalake/*:/usr/hdp/current/spark_llap/*:/usr/hdp/current/spark2-client/conf:'\n",
+    "os.environ['LD_LIBRARY_PATH'] ='/usr/hdp/current/hadoop-client/lib/native:/usr/hdp/current/hadoop-client/lib/native/Linux-amd64-64'\n",
+    "os.environ['_HADOOP_LZO_JAR'] ='/usr/hdp/2.6.5.8-7/hadoop/lib/hadoop-lzo-0.6.0.2.6.5.8-7.jar'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[REF_YEAR: string, mask_portfolio_code: string, Title: string, Formal_Forename: string, Preferred_Forename: string, Corporate_Title: string, Middle_Names: string, Surname: string, Business_Title: string, Position_Number: string, Position_Description: string, Work_Email_Address: string, Snapshot_Month: string, HR_Department_Code: string, Set_ID: string, Division: string, SubDivision1: string, SubDivision2: string, SubDivision3: string, SubDivision4: string, SubDivision5: string, SubDivision6: string, SubDivision7: string, Cost_Centre: string, Report_Level: string, Class: string, Cost_Centre_Name: string, Global_Cost_Centre: string, Legal_Entity: string, RBS_Structural_Region: string, Work_Location_Floor: string, Work_Location_Address1: string, Work_Location__Address2: string, Work_Location_Address3: string, Work_Location_Address4: string, Work_Location_Sub_Country: string, Work_Location_-_Country: string, Work_Location_-_Depot: string, Work_Location_Code: string, Work_Location_-_Post_Code: string, Age: string, Date_of_Birth: string, Gender_Code: string, Job_Code: string, Accredited_Service_Date: string, Job_Entry_Date: string, Contract_End_Date: string, Age_Band_Code: string, Cont_Service_(Yrs): string, Cont_Service_Band: string, Manager_Level: string, FullorPart_Time: string, Permanent_or_FTC: string, ActiveorInActive: string, Peoplesoft_Company_Code: string, Peoplesoft_Company_Description: string, Line_Manager_ID: string, Line_Manager_First_Name: string, Line_Manager_Surname: string, Grade: string, FTE: string, FTE_Count: string, Last_Performance_Year_Rating: string, Last_Performance_Year: string, Last_Performance_Year_-1_Rating: string, Last_Performance_Year_-1: string, GBP_Salary_Element_(SUM): string, GBP_FTE_Salary_Element_(SUM): string, Local_Currency: string, Local_Salary_(SUM): string, Bonus: string]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "get_spark_blob(account_name, account_key).read.format('csv').option('header', 'true').load('wasb://qbdata@qbsecstorage.blob.core.windows.net/data/01_raw/HR/20180314/')"
+    "#Important step - Find the spark configuration\n",
+    "import findspark\n",
+    "findspark.init()"
    ]
   },
   {
@@ -57,43 +59,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "spark.conf.set(\"fs.azure.account.key.qbsecstorage.blob.core.windows.net\", \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\")\n",
-    "spark.conf.set(\"fs.wasb.impl\",\"org.apache.hadoop.fs.azure.NativeAzureFileSystem\")"
+    "from pyspark.sql import SparkSession\n",
+    "spark = SparkSession.builder \\\n",
+    "        .appName(\"kirti-test-5core\") \\\n",
+    "        .master(\"yarn\") \\\n",
+    "        .config(\"fs.azure.account.key.qbsecstorage.blob.core.windows.net\", \\\n",
+    "                \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\") \\\n",
+    "        .config(\"spark.dynamicAllocation.enabled\", \"true\") \\\n",
+    "        .config(\"spark.shuffle.service.enabled\", \"true\") \\\n",
+    "        .config(\"spark.executor.cores\", \"5\") \\\n",
+    "        .config(\"spark.executor.memoryOverhead\", \"1g\") \\\n",
+    "        .config(\"spark.executor.memory\", \"16g\") \\\n",
+    "        .getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import *\n",
-    "from pyspark.sql.types import *\n",
-    "import pandas"
+    "from pyspark.sql.types import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df = spark.read.parquet(\"wasb://qbdata@qbsecstorage.blob.core.windows.net/data/03_primary/product_jan_18/parquet/201804091123/\")"
+    "df = spark.read.parquet(\"wasb://qbdata@qbsecstorage.blob.core.windows.net/data/03_primary/product_holding/parquet/20180716143800/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -165,8 +176,8 @@
       " |-- DR_NII_GFTP: double (nullable = true)\n",
       " |-- CR_NII_GFTP: double (nullable = true)\n",
       " |-- INCOME_GFTP: double (nullable = true)\n",
-      " |-- DEAL_START_DATE: date (nullable = true)\n",
-      " |-- DEAL_MATURITY_DATE: date (nullable = true)\n",
+      " |-- DEAL_START_DATE: string (nullable = true)\n",
+      " |-- DEAL_MATURITY_DATE: string (nullable = true)\n",
       " |-- DEAL_CURRENCY: string (nullable = true)\n",
       " |-- ACCOUNT_CLOSED_DATE: string (nullable = true)\n",
       " |-- DEBIT_MARGIN_RATE: double (nullable = true)\n",
@@ -181,52 +192,54 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df2 = df.selectExpr(\"1 as rn\").limit(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+-------------+\n",
-      "| REF_DATE|BUSINESS_DATE|\n",
-      "+---------+-------------+\n",
-      "|01FEB2017|    28FEB2017|\n",
-      "|01JAN2018|    31JAN2018|\n",
-      "|01JAN2017|    31JAN2017|\n",
-      "|01AUG2017|    31AUG2017|\n",
-      "|01NOV2017|    30NOV2017|\n",
-      "|01MAR2017|    31MAR2017|\n",
-      "|01MAY2017|    31MAY2017|\n",
-      "|01SEP2017|    30SEP2017|\n",
-      "|01APR2017|    30APR2017|\n",
-      "|01JUN2017|    30JUN2017|\n",
-      "|01OCT2017|    31OCT2017|\n",
-      "|01DEC2017|    31DEC2017|\n",
-      "|01JUL2017|    31JUL2017|\n",
-      "+---------+-------------+\n",
+      "+--------------------+-------------+--------------------+--------+\n",
+      "| REPORT_LINE_L5_CODE|BUSINESS_AREA|    sum(INCOME_BASE)|count(1)|\n",
+      "+--------------------+-------------+--------------------+--------+\n",
+      "|CRP5_A_FEE_LOAN_DRIP|       CPBTOT| 5.802856476000923E9|53350400|\n",
+      "|       CRP5_GRP_ADAM|       CPBTOT|           1.78179E7|   10500|\n",
+      "|      CRP5_OVERDRAFT|        BBTOT|   47772.99999999991| 1187000|\n",
+      "|      CRP5_DEP_NIBBS|    WLGLYNTOT|  1044633.0000000024|  893500|\n",
+      "|CRP5_A_FEE_LOAN_DRIP|        RBSCR|1.3103197999999993E7|   19700|\n",
+      "|    CRP5_DEP_MANAGED|         null|                 0.0|     700|\n",
+      "|    CRP5_DEP_CUR_IBS|         null|2.0733093399999866E8|10305800|\n",
+      "|                null|        RBSCR|   434510.9999998809| 1648400|\n",
+      "| CRP5_A_FEE_LOAN_DEF|       CPBTOT|-8.004313797000002E9| 4521000|\n",
+      "|     CRP5_LIBOR_FEES|        RBSCR|  5.10304929999988E7|  441200|\n",
+      "|      CRP5_INT_TRADE|    WLGLYNTOT|            120000.0|    2200|\n",
+      "|    CRP5_LIBOR_LOANS|     CORP&TSY|1.5119781099999994E8|  244100|\n",
+      "|    CRP5_DEP_CUR_IBS|        RBSCR| 4.949000899999956E7| 1357200|\n",
+      "|             CRP5_EB|     CORP&TSY|   573989.0000000033|   10800|\n",
+      "|      CRP5_DEP_NIBBS|        BBTOT|   1113269.999999997| 4744200|\n",
+      "|  CRP5_GRP_PRIV_BANK|    WLGLYNTOT|                null|     700|\n",
+      "|   CRP5_LENDING_FEES|         null|   -7672.99999999998|    2100|\n",
+      "|            CRP5_B&G|        BBTOT|                 0.0|   10100|\n",
+      "| CRP5_LIBOR_NON_UTIL|       CPBTOT|2.636597726400007...|28412400|\n",
+      "|     CRP5_CCY_ASSETS|        RBSCR|  2212597.9999999935|  324500|\n",
+      "+--------------------+-------------+--------------------+--------+\n",
+      "only showing top 20 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df.select(\"REF_DATE\",\"BUSINESS_DATE\").distinct().show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "roman_jupyter\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!whoami"
+    "df.crossJoin(df2).groupBy(\"REPORT_LINE_L5_CODE\", \"BUSINESS_AREA\").agg(sum(\"INCOME_BASE\"), count(lit(1))).show()"
    ]
   },
   {
@@ -241,21 +254,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2 Spark - python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "spark-python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
