--- a/2.+Read_BLOB_Example+-+Using+Local+Spark+from+DSVM.ipynb
+++ b/2.+Read_BLOB_Example+-+Using+Local+Spark+from+DSVM.ipynb
@@ -22,8 +22,8 @@
    },
    "outputs": [],
    "source": [
-    "account_name = 'qbsecstorage'\n",
-    "account_key = '3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw=='"
+    "account_name = 'AC_NAME'\n",
+    "account_key = '???'"
    ]
   },
   {
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "get_spark_blob(account_name, account_key).read.format('csv').option('header', 'true').load('wasb://qbdata@qbsecstorage.blob.core.windows.net/data/01_raw/HR/20180314/')"
+    "get_spark_blob(account_name, account_key).read.format('csv').option('header', 'true').load('wasb://qbdata@A.blob.core.windows.net/data/01_raw/HR/20180314/')"
    ]
   },
   {
@@ -63,7 +63,7 @@
    },
    "outputs": [],
    "source": [
-    "spark.conf.set(\"fs.azure.account.key.qbsecstorage.blob.core.windows.net\", \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\")\n",
+    "spark.conf.set(\"fs.azure.account.key.AC_NM.blob.core.windows.net\", \"???\")\n",
     "spark.conf.set(\"fs.wasb.impl\",\"org.apache.hadoop.fs.azure.NativeAzureFileSystem\")"
    ]
   },
@@ -88,7 +88,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.parquet(\"wasb://qbdata@qbsecstorage.blob.core.windows.net/data/03_primary/product_jan_18/parquet/201804091123/\")"
+    "df = spark.read.parquet(\"wasb://qbdata@AC_NM.blob.core.windows.net/data/03_primary/product_jan_18/parquet/201804091123/\")"
    ]
   },
   {
