--- a/3.+Local+Spark+Session+-+Python+Example.ipynb
+++ b/3.+Local+Spark+Session+-+Python+Example.ipynb
@@ -27,8 +27,8 @@
     "spark = SparkSession.builder \\\n",
     "\t.appName(\"test\") \\\n",
     "\t.master(\"local[*]\") \\\n",
-    "\t.config(\"fs.azure.account.key.qbsecstorage.blob.core.windows.net\", #\n",
-    "            \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\") \\\n",
+    "\t.config(\"fs.azure.account.key.AC_NM.blob.core.windows.net\", #\n",
+    "            \"???\") \\\n",
     "\t.getOrCreate()"
    ]
   },
