--- a/3.+Local+Spark+Session+-+Python+Example.ipynb
+++ b/3.+Local+Spark+Session+-+Python+Example.ipynb
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.parquet(\"wasb://qbdata@qbsecstorage.blob.core.windows.net/data/03_primary/customer/parquet/201804041057/\")"
+    "df = spark.read.parquet(\"wasb://qbdata@AC_NM.blob.core.windows.net/data/03_primary/customer/parquet/201804041057/\")"
    ]
   },
   {
