--- a/6.+Performance+Testing+-+Final+%28to+be+used+setting%29.ipynb
+++ b/6.+Performance+Testing+-+Final+%28to+be+used+setting%29.ipynb
@@ -69,8 +69,8 @@
     "spark = SparkSession.builder \\\n",
     "        .appName(\"kirti-test-5core\") \\\n",
     "        .master(\"yarn\") \\\n",
-    "        .config(\"fs.azure.account.key.qbsecstorage.blob.core.windows.net\", \\\n",
-    "                \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\") \\\n",
+    "        .config(\"fs.azure.account.key.AC_NM.blob.core.windows.net\", \\\n",
+    "                \"???\") \\\n",
     "        .config(\"spark.dynamicAllocation.enabled\", \"true\") \\\n",
     "        .config(\"spark.shuffle.service.enabled\", \"true\") \\\n",
     "        .config(\"spark.executor.cores\", \"5\") \\\n",
@@ -99,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.parquet(\"wasb://qbdata@qbsecstorage.blob.core.windows.net/data/03_primary/product_holding/parquet/20180716143800/\")"
+    "df = spark.read.parquet(\"wasb://qbdata@AC_NM.blob.core.windows.net/data/03_primary/product_holding/parquet/20180716143800/\")"
    ]
   },
   {
