--- a/Reading_directly_from_blob.ipynb
+++ b/Reading_directly_from_blob.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "spark.conf.set(\"fs.azure.account.key.qbsecstorage.blob.core.windows.net\", \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\")\n",
+    "spark.conf.set(\"fs.azure.account.key.AC_NM.blob.core.windows.net\", \"???\")\n",
     "spark.conf.set(\"fs.wasb.impl\",\"org.apache.hadoop.fs.azure.NativeAzureFileSystem\")"
    ]
   },
@@ -20,10 +20,10 @@
    },
    "outputs": [],
    "source": [
-    "stg_accnt_nm = \"qbsecstorage\"\n",
+    "stg_accnt_nm = \"AC_NM\"\n",
     "cntnr_nm = \"qbdata\"\n",
     "prefix =\"data/03_primary\"\n",
-    "accnt_key = \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\""
+    "accnt_key = \"???\""
    ]
   },
   {
