--- a/99.+Performance+Test+-+3+core+12g+dynamic.ipynb
+++ b/99.+Performance+Test+-+3+core+12g+dynamic.ipynb
@@ -67,8 +67,8 @@
     "spark = SparkSession.builder \\\n",
     "        .appName(\"kirti-test-3core-12g\") \\\n",
     "        .master(\"yarn\") \\\n",
-    "        .config(\"fs.azure.account.key.qbsecstorage.blob.core.windows.net\", \\\n",
-    "                \"3CUkUfpScv2RctZKth4t/iZPPk6DJa2935jZtyjpLWJSjnNm8/dDfgWnR+5d0w9RU2AIucoUAiU1ZIFWXzbkVw==\") \\\n",
+    "        .config(\"fs.azure.account.key.AC_NM.blob.core.windows.net\", \\\n",
+    "                \"???\") \\\n",
     "        .config(\"spark.executor.cores\", \"3\") \\\n",
     "        .config(\"spark.executor.memoryOverhead\", \"1g\") \\\n",
     "        .config(\"spark.executor.memory\", \"12g\") \\\n",
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read.parquet(\"wasb://qbdata@qbsecstorage.blob.core.windows.net/data/03_primary/product_holding/parquet/20180716143800/\")"
+    "df = spark.read.parquet(\"wasb://qbdata@AC_NM.blob.core.windows.net/data/03_primary/product_holding/parquet/20180716143800/\")"
    ]
   },
   {
